--- a/index.html
+++ b/index.html
@@ -1,120 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Great Idea - Responsive I</title>
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
-</head>
-
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-<div class="container">
-  <header>
-    <nav class="navigation">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="">Product</a>
-      <a href="">Vision</a>
-      <a href="">Features</a>
-      <a href="">About</a>
-      <a href="">Contact</a>
-    </nav>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
-  </header>
-
-  <div class="container2">
-    <div class="innovation">
-      <h2>Innovation</h2>
-      <h2>On</h2>
-      <h2>Demand</h2>
-      <button type="button">Get Started</button>
-    </div>
-
-    <img
-      src="img/header-img.png"
-      class="circle"
-      alt="Image of a code snippet."
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
     />
-  </div>
-  <hr />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-  <div class="main">
-    <div class="mainContainOne">
-      <div class="features">
-        <h3>Features</h3>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et.
-          Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus
-          scelerisque quis.
-        </p>
+  <body>
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <div class="container">
+      <header>
+        <nav class="navigation">
+          <a href="index.html">Home</a>
+          <a href="services.html">Services</a>
+          <a href="">Product</a>
+          <a href="">Vision</a>
+          <a href="">Features</a>
+          <a href="">About</a>
+          <a href="">Contact</a>
+        </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </header>
+
+      <div class="container2">
+        <div class="innovation">
+          <h2>Innovation</h2>
+          <h2>On</h2>
+          <h2>Demand</h2>
+          <button type="button">Get Started</button>
+        </div>
+
+        <img
+          src="img/header-img.png"
+          class="circle"
+          alt="Image of a code snippet."
+        />
       </div>
+      <hr />
 
-      <div class="about">
-        <h3>About</h3>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et.
-          Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus
-          scelerisque quis.
-        </p>
+      <div class="main">
+        <div class="mainContainOne">
+          <div class="features">
+            <h3>Features</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+
+          <div class="about">
+            <h3>About</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+        </div>
+
+        <img
+          class="middle-img"
+          src="img/mid-page-accent.jpg"
+          alt="Image of code snippets across the screen"
+        />
+
+        <div class="mainContainTwo">
+          <div class="services">
+            <h3>Services</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+
+          <div class="product">
+            <h3>Product</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+
+          <div class="vision">
+            <h3>Vision</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="contact">
+        <h3>Contact</h3>
+        <address>Way 456 Street</address>
+        <address>Somewhere, USA</address>
+        <p>1 (888) 888-8888</p>
+        <p>sales@greatidea.io</p>
       </div>
     </div>
-
-    <img
-      class="middle-img"
-      src="img/mid-page-accent.jpg"
-      alt="Image of code snippets across the screen"
-    />
-
-    <div class="mainContainTwo">
-      <div class="services">
-        <h3>Services</h3>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et.
-          Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus
-          scelerisque quis.
-        </p>
-      </div>
-
-      <div class="product">
-        <h3>Product</h3>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et.
-          Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus
-          scelerisque quis.
-        </p>
-      </div>
-
-      <div class="vision">
-        <h3>Vision</h3>
-        <p>
-          Aliquam elementum magna eros, ac posuere elvit tempus et.
-          Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus
-          scelerisque quis.
-        </p>
-      </div>
-    </div>
-  </div>
-  <hr />
-  <div class="contact">
-    <h3>Contact</h3>
-    <address>Way 456 Street</address>
-    <address>Somewhere, USA</address>
-    <p>1 (888) 888-8888</p>
-    <p>sales@greatidea.io</p>
-  </div>
-
-
-</div>
-</body>
+  </body>
 </html>
